Avoid overlap between modal title and dismiss button

--- a/app/styles/_modals.scss
+++ b/app/styles/_modals.scss
@@ -42,6 +42,7 @@
 .ds-modal__title {
   font-size: 30px;
   margin: 0;
+  margin-right: 48px; // Avoid absolutely-positioned close button
 }
 
 .lightbox-modal {
